Fix: Correções de CORS e autenticação